objects/SFDC_Industry_Assessment_Question__mdt.object
<CustomObject>
    <description>Questions asked in an industry upgrade transition assessment</description>
    <fields>
        <fullName>Answer_Field_API_Name__c</fullName>
        <label>Answer Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Label_Name__c</fullName>
        <label>Question Label Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Question Required?</label>
        <type>Checkbox</type>
    </fields>
    <label>SFDC Industry Assessment Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Question_Label_Name__c</columns>
        <columns>Answer_Field_API_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>SFDC Industry Assessment Questions</pluralLabel>
</CustomObject>